--- a/webmap/public/index.html
+++ b/webmap/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <script src="./config.js"></script>
     <title>建筑物提取训练与预测工具</title>
   </head>
   <body>
